--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
 	"snippets" : ">=0.0.5",
-	"cookies" : ">=0.1.6"
+	"cookies" : ">=0.1.6",
+	"json-object" : ">=0.0.2"
   },
   "devDependencies": {}
 }
